syntax = "proto3";
package pb;

message Relay {
  string id = 1;
  relaytype type = 2;
  bytes data = 3;
}

enum relaytype {
  SetSessionId = 0;
  Ack = 1;
  Data = 2;
  Disconnect = 3;
  Wake = 4;
}

message setSessionIdMsg {
  string sessionId = 1;
  int32 role = 2;
}

message relayMsg{
  string sessionId = 1;
  bytes data = 2;
}

message ackMsg {
  bytes id = 1;
  bool res = 2;
}




